discussion/kv_engine/168157/168157_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Add function to get terminal size

Change-Id: Ia0ac381de60f17db39b900ef06aeb69b325177f3

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-01-04 07:02:54.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-04 07:29:50.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36083/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/utilities/terminal_size.h:21:11:
error: use of undeclared identifier "size_t"; did you mean "sizeof"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36083/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14626/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/terminal_size.cc:45:22: error: no member named "numeric_limits" in namespace "std" [clang-diagnostic-error]
        return {std::numeric_limits<size_t>::max(),
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/terminal_size.cc:45:37: error: unexpected type name "size_t": expected expression [clang-diagnostic-error]
        return {std::numeric_limits<size_t>::max(),
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/terminal_size.cc:45:46: error: no member named "max" in the global namespace [clang-diagnostic-error]
        return {std::numeric_limits<size_t>::max(),
                                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/terminal_size.cc:46:22: error: no member named "numeric_limits" in namespace "std" [clang-diagnostic-error]
                std::numeric_limits<size_t>::max()};
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/terminal_size.cc:46:37: error: unexpected type name "size_t": expected expression [clang-diagnostic-error]
                std::numeric_limits<size_t>::max()};
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/terminal_size.cc:46:46: error: no member named "max" in the global namespace [clang-diagnostic-error]
                std::numeric_limits<size_t>::max()};
                                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/terminal_size.h:21:11: error: use of undeclared identifier "size_t"; did you mean "sizeof"? [clang-diagnostic-error]
std::pair<size_t, size_t> getTerminalSize();
          ^~~~~~
          sizeof
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/terminal_size.h:21:17: error: expected expression [clang-diagnostic-error]
std::pair<size_t, size_t> getTerminalSize();
                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14626/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/terminal_size.cc:45:22:
error: no member named "numeric_limits" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14626/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13457/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42568/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4266/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16565/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16273/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15426/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17348/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4324/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24684/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-01-04 08:06:05.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
